# PO

./: .gitignore  CMakeLists.txt  Category.h  DatabaseCategory.h  DatabaseElement.cpp  DatabaseElement.h  DatabaseLeaf.h  Educational.cpp  Educational.h  Enterprise.cpp  Enterprise.h  Foreign.cpp  Foreign.h  Institution.cpp  Institution.h  National.cpp  National.h  Person.cpp  Person.h  Polish.cpp  Polish.h  Private.cpp  Private.h  Service.cpp  Service.h  VIP.cpp  VIP.h  Worker.cpp  Worker.h  main.cpp
